# cosmic-sound-theme

./: AUTHORS  README.md  meson.build
.github/: ISSUE_TEMPLATE.md
